Implemented multiple columns in the about panel

--- a/AdminLauncher.AppWPF/App.xaml
+++ b/AdminLauncher.AppWPF/App.xaml
@@ -14,6 +14,7 @@
                 <Setter Property="Background" Value="{DynamicResource MahApps.Brushes.Accent}"/>
                 <Setter Property="Foreground" Value="{DynamicResource MahApps.Brushes.IdealForeground}" />
             </Style>
+        <local:HalfWidthConverter x:Key="HalfWidthConverter"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
