--- a/AdminLauncher.AppWPF/MainWindow.xaml
+++ b/AdminLauncher.AppWPF/MainWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:AdminLauncher.AppWPF"
         xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d"
-        Title="Admin Launcher" Height="800" Width="400"
+        Title="Admin Launcher" 
+        Height="400" Width="400"
         WindowStartupLocation="Manual"
         ResizeMode="NoResize"
         WindowStyle="SingleBorderWindow"
